Fix card layout since p is now scrollable removing overflow

--- a/styles.css
+++ b/styles.css
@@ -245,9 +245,9 @@ h2 {font-size: 1.4rem; font-weight: 500;}
     height: 100%;
 
     display: grid;
-    grid-template: repeat(auto-fill, 220px) / repeat(auto-fill, 380px);
-    gap: 20px;
-    padding-right: 0.5rem;
+    grid-template: repeat(3, 30%) / repeat(2, 50%);
+    gap: 3%;
+    margin-right: 0.5rem;
 }
 
 .card {
